change security.id type to auto_increment int